# lunarscout

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.in
.github/workflows/: ci.yml
benchmarks/: timeseries_two_file_prototype.py
data/: product_overview.tif
data/spice/: default_kernels.toml
docs/: ARCHITECTURE.md  FRESH_PLAN.md  FRESH_REVIEW.md  IDEAS.txt  PLAN1.md  PUBLIC_API_REVIEW.md  TESTPYPI_0.1.0rc1.md  TUTORIAL.md  USER_GUIDE.md  api-sketch.md  example-improvement-plan.md  index.md  map-algebra-implementation-plan.md  map-algebra-large-raster-plan.md  map-algebra-script-ideas.md  next.txt  numba-horizon-kernel-tuning-sustained.json  numba-horizon-phase-0-baseline.json  numba-horizon-phase-0-inventory.md  numba-horizon-phase-0-multi-patch-benchmark.json  numba-horizon-phase-0-production-baseline.json  numba-horizon-phase-1-oracle-schema.md  numba-horizon-phase-1-real-terrain-fixtures.json  numba-horizon-phase-2-data-contract.md  numba-horizon-phase-3-host-benchmark.json  numba-horizon-phase-3-host-geometry.md  numba-horizon-phase-3-real-terrain.json  numba-horizon-phase-4-cuda-memcheck.json  numba-horizon-phase-4-hierarchy-safety.json  numba-horizon-phase-4-multi-real-terrain.json  numba-horizon-phase-4-real-terrain.json  numba-horizon-phase-4-real-terrain.md  numba-horizon-phase-4a-cuda-mechanics.json  numba-horizon-phase-4a-cuda-mechanics.md  numba-horizon-phase-4b-fixed-step.json  numba-horizon-phase-4b-fixed-step.md  numba-horizon-phase-4c-adaptive.json  numba-horizon-phase-4c-adaptive.md  numba-horizon-phase-4d-hierarchy.json  numba-horizon-phase-4d-hierarchy.md  (+43 more)
examples/: .#notebook_example.py  00_geotiff_and_coordinates.py  01_terrain_products.py  02_region_filtering.py  03_alignment.py  03_region_filtering.py  04_alignment.py  04_temporal_cube.py  05_file_backed_series.py  06_streaming_reductions.py  07_incremental_writer.py  07_native_sun_fraction.py  08_native_horizon_margins.py  09_qgis_vrt.py  10_landing_site_screening.py  11_native_end_to_end_validation.py  11_spice_vectors.py  12_body_and_horizon_plots.py  12_native_performance_benchmark.py  13_native_psr.py  13_synthetic_lightmap.py  14_timeseries_two_file_prototype.py  15_python_psr.py  16_generate_horizons.py  17_downstream_products.py  18_map_algebra_basics.py  18_map_algebra_screening.py  19_map_algebra_focal.py  19_map_algebra_validity.py  20_map_algebra_grids.py  20_map_algebra_temporal.py  21_map_algebra_numerics.py  21_map_algebra_terrain_resample.py  22_map_algebra_suitability.py  25_map_algebra_focal.py  27_map_algebra_terrain_resample.py  31_map_algebra_temporal.py  README.md  _example_support.py  horizon_examples.ipynb
examples/data/: synthetic_horizon_manifest.json
examples/notebooks/: 01_raster_foundations.ipynb  02_temporal_workflows.ipynb  03_celestial_geometry.ipynb  04_map_algebra_foundations.ipynb  05_suitability_and_neighborhoods.ipynb  06_lazy_and_temporal_algebra.ipynb  README.md
native/moonlib/: BridgeSmoke.cs  LightmapGenerator.cs  LightmapToGeotiff.cs  MoonlibBridge.cs  SynchronousProgress.cs  TerrainProducts.cs  Utilities.cs  moonlib.csproj
scripts/: build_release_artifacts.py  clip_geotiff_to_128_tiles.py  generate_notebooks.py  generate_synthetic_horizon_data.py  generic-spk.txt  get_link_tree.py  get_links.py  initial_urls.txt  lunar_map_products.json  lunar_map_products.py  run_generate_horizons.py  update_lunar_map_product_extents.py  validate_safe_haven_spot_check.py
scripts/numba_horizon/: CSharpBaselineCapture.cs  CSharpBaselineCapture.csproj  CSharpMultiPatchBenchmark.cs  (+42 more)
tests/: conftest.py  test_alignment.py  test_cuda_status.py  test_dependency_boundary.py  test_examples.py  test_georeference.py  test_geotiff_io.py  test_map_products.py  test_native.py  test_native_horizon.py  test_native_product.py  test_native_temporal.py  test_product_errors.py  test_public_horizon.py  test_public_lightmap.py  test_public_m2_validation.py  test_regions.py  test_release_artifacts.py  test_scenario.py  test_spice.py  test_temporal.py  test_temporal_store.py  test_terrain.py
(+257 files in other folders)
