[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarscout"
version = "0.1.0"
description = "Notebook-first lunar mission analysis with NumPy and GeoTIFF data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.66,<0.67",
    "numpy>=2.0",
    "pyproj>=3.7",
    "rasterio>=1.5",
    "scipy>=1.14",
    "spiceypy>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lunarscout = ["data/spice/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
