[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarscout"
version = "0.1.0rc2"
description = "Lunar terrain, horizon, lighting, visibility, and landed-mission analysis with NumPy and Numba"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Mark H. Shirley", email = "mark.h.shirley@gmail.com" },
]
maintainers = [
    { name = "Mark H. Shirley", email = "mark.h.shirley@gmail.com" },
]
requires-python = ">=3.11"
keywords = [
    "lunar",
    "terrain",
    "horizon",
    "lighting",
    "visibility",
    "illumination",
    "PSR",
    "safe-haven",
    "mission-duration",
    "SPICE",
    "Numba",
    "CUDA",
    "geospatial",
    "raster",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numba>=0.66,<0.67",
    "numpy>=2.0",
    "pyproj>=3.7",
    "rasterio>=1.4.4,<1.6",
    "scipy>=1.14",
    "spiceypy>=8.1,<9",
]

[project.urls]
Homepage = "https://github.com/Costigan/lunarscout"
Issues = "https://github.com/Costigan/lunarscout/issues"
Source = "https://github.com/Costigan/lunarscout"

[project.optional-dependencies]
cuda = [
    "numba-cuda[cu12]>=0.30.4,<0.31",
]
dev = [
    "build>=1.2",
    "coverage>=7.0",
    "pytest>=8.0",
    "twine>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lunarscout = ["data/spice/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
